# occupationcoder-international

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  config.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  system_setup.sh
occupationcoder/: cleaner.py  coder.py
occupationcoder/createdictionaries/: build_dict.py
occupationcoder/dictionaries/: titles_mg_ons_nodesc.json
occupationcoder/dictionaries/isco/: buckets_isco.json  titles_isco.json
occupationcoder/dictionaries/soc/: replace_lookup_abbreviations.csv  titles_minor_group_ons.json  words_not_in_replace_lookupONLYfreq3Abovwe.csv
occupationcoder/notebooks/: building_custom_dictionaries.ipynb
src/oc3i/: __init__.py  cleaner.py  coder.py  config.yml
src/oc3i/createdictionaries/: build_dict.py  check_dict.py
src/oc3i/dictionaries/isco/: buckets_isco.json
tests/: test_occupationcoder.py  test_vacancies2.csv
