[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "occupationcoder-international"
description = "A fork of the 'occupationcoder' package: a tool to assign standard occupational classification codes (e.g ISCO) to job descriptions."
readme = "README.md"
authors = [{ name="ONS Data Science Campus", email="datacampus@ons.gov.uk" }]
license = { text = "MIT" }
dependencies = [
    "fuzzywuzzy==0.18.0",
    "nltk==3.9.1",
    "numpy==2.2.5",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "rapidfuzz==3.13.0",
    "regex==2024.11.6",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "Unidecode==1.4.0",
    "pyaml==25.1.0"
]

[project.optional-dependencies]
dev = [
    "ipykernel==6.29.5",
    "ipython==9.2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
oc3i = "oc3i.coder:main"

[tool.setuptools.package-data]
oc3i = [
    "config.yml",
    "dictionaries/*.json",
    "dictionaries/**/*.json"
]

[tool.setuptools.dynamic]
version = { attr = "oc3i.__version__" }